--- a/Changes
+++ b/Changes
@@ -20,9 +20,24 @@ Revision history for Perl extension Module::Build.
    format.  See the main documentation of Module::Build for more
    details.
 
+ - Added an 'auto_features' capability, which simplifies the process
+   of defining features that depend on a set of prerequisites.
+
  - Added the 'get_options' parameter, which lets module authors
    declare certain command-line arguments their Build.PL can accept
    [David Wheeler]
+
+ - During 'distdir' and 'distmeta' actions, die a bit more gracefully
+   if there's no MANIFEST (i.e. explicitly say that a MANIFEST is
+   required). [Spotted by Adrian Howard]
+
+ - Eliminated a recursive dependency between creating the MANIFEST
+   file and creating the META.yml file.  [Spotted by Dave Rolsky]
+
+ - The add_to_cleanup() method will now accept glob()-style patterns
+   in addition to explicit filenames.  Also documented the fact that
+   they can be specified in either Unix-style or native-style
+   notation.
 
  - Passing a PREFIX value to a pass-through Makefile 'make install'
    now has the same effect as passing it to 'perl Makefile.PL' (it
@@ -31,11 +46,37 @@ Revision history for Perl extension Module::Build.
  - Added the 'testcover' action, which runs a test suite using
    Devel::Cover.  [Dave Rolsky]
 
+ - Added the 'lib' and 'arch' installation directories to the search
+   path for the 'diff' action, since they won't necessarily (though
+   they usually will) be in @INC at installation time. [Suggested by
+   Kevin Baker]
+
  - The "=head3" POD directive isn't supported in older podlators
    (particularly Pod::Man), so we don't use it anymore.
 
+ - Fixed a typo & improved the docs in the SUBCLASSING section. [Ron
+   Savage]
+
+ - Added the '.tmp' suffix to the default MANIFEST.SKIP file, which
+   should avoid adding things like pod2htmi.tmp to the MANIFEST [Ron
+   Savage]
+
+ - Backup files from Emacs, containing the string '.#' in their names,
+   should no longer find their way into the blib/ directory (and from
+   there into installation directories).
+
+ - Worked around an unpleasant interaction between version.pm and the
+   version-checking code that makes sure Module::Build's version
+   hasn't changed during the lifetime of the 'Build' script. [Reported
+   by Trevor Schellhorn]
+
  - Fixed a problem in htmlify_pods() that would produce test failures
    on Cygwin (and probably elsewhere).  [Yitzchak Scott-Thoennes]
+
+ - Fixed a test failure on Cygwin (and probably elsewhere) in
+   t/compat.t, resulting from empty environment variables being set to
+   the empty string (as opposed to simply being unset) by their mere
+   presence in the "EXPORT:" list.
 
  - Fixed a fatal error that occurred when the author specified
    'dist_author' manually in their Build.PL script. [Spotted by Ron
